k8s/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: simple-budget
  labels:
    app: simple-budget
spec:
  parentRefs:
    - name: external-http
      namespace: default
      sectionName: https
  hostnames:
    - REPLACE_ME_HOSTNAME
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: simple-budget-blue
          port: 80
          weight: 100
        - name: simple-budget-green
          port: 80
          weight: 0
